@@ -1,5 +1,9 @@
 2011-09-18  Valek Filippov
 
+		FH: show FH8 dictionary.
+
+2011-09-18  Valek Filippov
+
 		FH: add parsing of v8 dictionary.
 
 2011-09-15  Valek Filippov
